@@ -1,6 +1,6 @@
 Package: kinship
-Version: 1.1.0-2
-Date: 2004-8-27
+Version: 1.1.0-3
+Date: 2004-9-6
 Title: mixed-effects Cox models, sparse matrices, and modeling data from large pedigrees
 Author: Beth Atkinson (atkinson@mayo.edu) for pedigree
         functions. Terry Therneau (therneau@mayo.edu) for all other functions.
@@ -25,4 +25,4 @@ License: Copyright 2003 Mayo Foundation for Medical Education and
         For other licensing arrangements, please contact Terry
         Therneau, Ph.D. Division of Biostatistics Mayo Clinic
         200 First St., SW Rochester, MN 55905 email: therneau@mayo.edu
-Packaged: Fri Aug 27 23:37:15 2004; jzhao
+Packaged: Mon Sep  6 14:29:29 2004; jzhao
