@@ -17,6 +17,10 @@
 25/07/2004 further fix on optim in coxme.fit, so no more complaints
 25/08/2004 add keywords as required by R 2.x
 27/08/2004 add version switch for R 2.x as required by setClassUnion("list or NULL",c())
+31/08/2004 remove <s-expression> contained in title of coxme.control.Rd
+01/09/2004 return of is.matrix.* and is.list.* for bdsmatrix,gchol.bdsmatrix, change eval()
+02/09/2004 document is.*.*
+03/09/2004 replace sys.parent() with parent.frame() in coxme/lmekin; uncomment !is.matrix in coxme.fit
 
 1. documented or obvious
 
@@ -45,11 +49,10 @@ thus ... in the function arguments are dropped
 
 4. other changes
 
-assign                  <- pos = 0
+assign                  <- envir as specified in R-FAQ
 nDotArgs                <- length(list(...)
 object                  <- from in places
 diag                    <- setMethod("diag", "diag<-"
-coxme.fit               <- valist[[i]], comment on !is.matrix
 gchol                   <- as.matrix()
 solve.gchol.bdsmatrix   <- temp@ <--> $
 par()$"1em"[2]          <- par()$"cin"[2]/7
